syntax = "proto2";
package xyz.hyli.timeflow.proto;
import "course.proto";

message DayList {
  repeated Course monday = 1;
  repeated Course tuesday = 2;
  repeated Course wednesday = 3;
  repeated Course thursday = 4;
  repeated Course friday = 5;
  repeated Course saturday = 6;
  repeated Course sunday = 7;
}

message Date {
  optional int32 year = 1;
  optional int32 month = 2;
  optional int32 day = 3;
}

message Time {
  optional int32 hour = 1;
  optional int32 minute = 2;
}

message Lesson {
  optional Time start = 1;
  optional Time end = 2;
}

message LessonsPerDay {
  repeated Lesson morning = 1;
  repeated Lesson afternoon = 2;
  repeated Lesson evening = 3;
}

message Schedule {
  optional string name = 1;
  optional bool deleted = 2;
  optional Schedule schedule = 3;
  optional Date termStartDate = 4;
  optional Date termEndDate = 5;
  optional LessonsPerDay lessonsPerDay = 6;
}